--- a/css/styles.css
+++ b/css/styles.css
@@ -2,26 +2,29 @@
 body{
 margin: 0;
 text-align: center;
+font-family: 'Merriweather', serif;
 }
 h1{
   margin-top: 0;
+  font-family: 'Gloria Hallelujah', cursive;
+}
+h2{
+font-family: 'Roboto', sans-serif;
+}
+h3{
+  font-family: 'Roboto', sans-serif;
 }
 .mountain{
 }
 .top-container{
   background-color: #ffe268;
   position: relative;
-  padding-top: 100px;
+  padding: 100px 0;
+
 }
 .middle-container{
-  background-color: #2f5d62;
-  height: 200px;
-  width: 200px;
 }
 .bottom-container{
-  background-color: #ffb037;
-  height: 200px;
-  width: 200px;
 }
 .pro{
   text-decoration: underline;
